# trentino-sca

./: INSTALL.txt  NOTICE  THIRD_PARTY.txt  THIRD_PARTY_1.0.0.txt  install.bat  install.sh
cpp/: 3rd_party.sh  CMakeLists.txt  LICENSE  my_add_cppcheck.cmake  my_add_tool.cmake  my_add_vera.cmake  my_find_boost.cmake  my_find_gmock.cmake  my_find_gtest.cmake  my_find_log4cplus.cmake  my_find_openslp.cmake  my_find_protobuf.cmake  my_find_protobuf_protoc.cmake  my_find_sed.cmake  my_find_thrift.cmake  my_find_zeromq.cmake  trentino.cppcheck  trentino_version.cmake
cpp/doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  pom.xml
cpp/doc/documents/: XSDTypeMapping.html
cpp/doc/img/: AssigningPropertyValuesFromParentComponentExample.vsd  CompositeReferenceSetterMethodExample.vsd  CompositeServiceInvocationWrapperExample.vsd  ReferencePromotionGraph.vsd  ServicePromotionGraph.vsd
cpp/res/: Binding.conf  Console.conf.in  Runtime.conf  log4cplus.properties
cpp/src/: DoxygenDummy.h
cpp/src/BindingCompactSoap/: CMakeLists.txt
cpp/src/BindingIpcClient/: CMakeLists.txt  TrentinoBindingIpcClientBindingHelper.cpp  TrentinoBindingIpcClientBindingHelper.h  TrentinoBindingIpcClientBindingTransport.cpp  TrentinoBindingIpcClientBindingTransport.h  TrentinoBindingIpcClientCommon.cpp  TrentinoBindingIpcClientCommon.h  TrentinoBindingIpcClientDataHandler.cpp  TrentinoBindingIpcClientDataHandler.h  TrentinoBindingIpcClientDefs.h  TrentinoBindingIpcClientImportExport.h  TrentinoBindingIpcClientProxyDelegate.cpp  TrentinoBindingIpcClientProxyDelegate.h
cpp/src/BindingIpcServer/: CMakeLists.txt  TrentinoBindingIpcBinding.cpp  TrentinoBindingIpcBinding.h  TrentinoBindingIpcBindingFactory.cpp  TrentinoBindingIpcBindingFactory.h  TrentinoBindingIpcBindingHelper.h  TrentinoBindingIpcContext.h  TrentinoBindingIpcDataHandler.cpp  TrentinoBindingIpcDataHandler.h  TrentinoBindingIpcDefinitions.h  TrentinoBindingIpcFaultDetailBuilder.cpp  TrentinoBindingIpcFaultDetailBuilder.h  TrentinoBindingIpcImportExport.h  TrentinoBindingIpcInvokerProxy.cpp  TrentinoBindingIpcInvokerProxy.h  TrentinoBindingIpcMemoryChecker.cpp  TrentinoBindingIpcMemoryChecker.h  TrentinoBindingIpcMemoryMapObj.h  TrentinoBindingIpcServiceInfoReaderFromIpcSoap.cpp  TrentinoBindingIpcServiceInfoReaderFromIpcSoap.h  TrentinoBindingIpcSoapMsg.h  TrentinoBindingIpcTransport.cpp  TrentinoBindingIpcTransport.h
cpp/src/BindingSCA/: CMakeLists.txt  TrentinoBindingSCA.h  TrentinoBindingSCACompactSoapDataHandler.h  TrentinoBindingSCAConstants.cpp  TrentinoBindingSCAConstants.h  TrentinoBindingSCAContext.h  TrentinoBindingSCADataHandler.cpp  TrentinoBindingSCADataHandler.h  TrentinoBindingSCAFaultDetailBuilder.cpp  TrentinoBindingSCAFaultDetailBuilder.h  TrentinoBindingSCAImpl.h  TrentinoBindingSCAImportExport.h  TrentinoBindingSCAInvokerProxy.cpp  TrentinoBindingSCAInvokerProxy.h  TrentinoBindingSCASCABindingFactory.cpp  TrentinoBindingSCASCABindingFactory.h  TrentinoBindingSCASCABindingHelper.h  TrentinoBindingSCASCABodyDeserializer.cpp  TrentinoBindingSCASCABodyDeserializer.h  TrentinoBindingSCAServiceInfoReader.cpp  TrentinoBindingSCAServiceInfoReader.h  TrentinoBindingSCATrentinoBindingSCA.cpp  TrentinoBindingSCATrentinoBindingSCA.h  TrentinoBindingSCAZeroMqServer.cpp  TrentinoBindingSCAZeroMqServer.h
cpp/src/BindingSCAClient/: CMakeLists.txt
cpp/src/BindingSCAClient _orig/: CMakeLists.txt  TrentinoBindingSCAClientDefs.h  TrentinoBindingSCAClientFaultDetailBuilder.cpp  TrentinoBindingSCAClientFaultDetailBuilder.h  TrentinoBindingSCAClientImportExport.h  TrentinoBindingSCAClientProxyDelegate.cpp  TrentinoBindingSCAClientProxyDelegate.h  TrentinoBindingSCAClientProxyDelegateImpl.cpp  TrentinoBindingSCAClientProxyDelegateImpl.h
cpp/src/BindingSCATransport/: CMakeLists.txt  TrentinoBindingSCAZeroMqDataHandler.h  TrentinoBindingSCAZeroMqServer.cpp  TrentinoBindingSCAZeroMqServer.h
cpp/src/BindingSCA_Orig/: CMakeLists.txt  TrentinoBindingSCA.h  TrentinoBindingSCAConstants.cpp  TrentinoBindingSCAConstants.h  TrentinoBindingSCAContext.h  TrentinoBindingSCADataHandler.cpp  TrentinoBindingSCADataHandler.h  TrentinoBindingSCAFaultDetailBuilder.cpp  TrentinoBindingSCAFaultDetailBuilder.h  TrentinoBindingSCAImpl.h  TrentinoBindingSCAImportExport.h  TrentinoBindingSCAInvokerProxy.cpp  TrentinoBindingSCAInvokerProxy.h  TrentinoBindingSCASCABindingFactory.cpp  TrentinoBindingSCASCABindingFactory.h  TrentinoBindingSCASCABindingHelper.h  TrentinoBindingSCASCABodyDeserializer.cpp  TrentinoBindingSCASCABodyDeserializer.h  TrentinoBindingSCAServiceInfoReader.cpp  TrentinoBindingSCAServiceInfoReader.h  TrentinoBindingSCATrentinoBindingSCA.cpp  TrentinoBindingSCATrentinoBindingSCA.h  TrentinoBindingSCAZeroMqDataHandler.h  TrentinoBindingSCAZeroMqServer.cpp  TrentinoBindingSCAZeroMqServer.h
cpp/src/BindingThrift/: CMakeLists.txt
cpp/src/CommonService/: CMakeLists.txt  InstallCommonServices.cmake  trengen_config_local.conf  trengen_config_remote.conf
cpp/src/Console/: CMakeLists.txt  Main.cpp  TrentinoConsole.cpp  TrentinoConsole.h  TrentinoConsoleCommand.cpp  TrentinoConsoleCommand.h  TrentinoConsoleCommand.inl  TrentinoConsoleCommandBoot.cpp  TrentinoConsoleCommandBoot.h  TrentinoConsoleCommandInfo.cpp  TrentinoConsoleCommandInfo.h  TrentinoConsoleCommandInfo.inl  TrentinoConsoleCommandInstall.cpp  TrentinoConsoleCommandInstall.h  TrentinoConsoleCommandInstall.inl  TrentinoConsoleCommandQuit.cpp  TrentinoConsoleCommandQuit.h  TrentinoConsoleCommandRemove.cpp  TrentinoConsoleCommandRemove.h  TrentinoConsoleCommandRewire.cpp  TrentinoConsoleCommandRewire.h  TrentinoConsoleCommandService.cpp  TrentinoConsoleCommandService.h  TrentinoConsoleCommandSetProperty.cpp  TrentinoConsoleCommandSetProperty.h  TrentinoConsoleCommandShutdown.cpp  TrentinoConsoleCommandShutdown.h  TrentinoConsoleCommandUpdateh.cpp  TrentinoConsoleCommandUpdateh.h  TrentinoConsoleConfiguration.cpp  TrentinoConsoleConfiguration.h  TrentinoConsoleConfiguration.inl  TrentinoConsoleContext.cpp  TrentinoConsoleContext.h  TrentinoConsoleContextAccessingCommand.cpp  (+10 more)
cpp/src/OpenSLP/: ChangeLog  (+1 more)
(+1966 files in other folders)
